--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 <div class="container-fluid">
   <div class="row">
     <h4>Ўзбекистон мустақиллигининг 24 йиллигига бағишланади</h4>
-    <div class="corner-ribbon top-right sticky blue"><a href="https://github.com/muminoff/uzb24">Лойиҳа</a></div>
+    <div class="corner-ribbon top-right sticky blue"><a target="_blank" href="https://github.com/muminoff/uzb24">Лойиҳа</a></div>
   </div>
   <div class="row">
     <div id="twitter-stream">
